# mozangle

./: Cargo.toml  Cross.toml  build.rs  build_data.rs  generate_build_data.py  qemu_mozangle-2775e06938641104_20230922-173550_197.core  rustfmt.toml
.github/workflows/: rust.yml
src/: lib.rs  tests.rs
src/shaders/: bindings.rs  generate_bindings.sh  mod.rs
