[package]
name = "mozangle"
version = "0.5.1"
authors = ["The ANGLE Project Authors", "The Servo Project Developers"]
license = "BSD-3-Clause"
description = "Mozilla's fork of Google ANGLE, repackaged as a Rust crate."
repository = "https://github.com/servo/mozangle"
readme = "README.md"

[dependencies]
lazy_static = "1.0"

[dev-dependencies]

[build-dependencies]
bindgen = { version = "0.69", default-features = false, features = [
    "runtime",
    "which-rustfmt",
] }
cc = { version = "1.0.83", features = ["parallel"] }
walkdir = "2"
